# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: my_gendiff.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py  main.py  stylish.py
gendiff/scripts/formatter/: plain.py
tests/: test_gendiff.py
tests/test_data/: beta.yaml  expected.txt  expected_json_format.txt  expected_plain.txt  expected_stylish.txt  flat1.json  flat1.yml  flat2.json
