[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = 'fungus', email = 'amortis@inbox.ru'}
]
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff<=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = []

[project.scripts]
gendiff = 'gendiff.scripts.main:main'
